# bfm

./: .gitignore  CMakeLists.txt  README.txt  ReducedIndex.h  ReducedIndexCursor.h  _fm_hg38  _fm_hg38_r  benches.sh  hit_log.txt  main.cpp  one_quer.fasta  prep.sh  quer.txt  ref.fna.fai  ref.fna.fai.red.index  ref.txt  runtimelog  test_quer0.fasta  test_quer1.fasta  test_quer2.fasta  test_quer3.fasta  three_quer.fasta  two_quer.fasta  zero_quer.fasta
